# 3DGEngine

./: .gitignore  CMakeLists.txt  JAM_CHECKLIST.md  RUNTIME_ROADMAP.md  breakout.cfg  package_game.ps1  pong.cfg
MaterialMaker/: CHANGES.md  CMakeLists.txt  ROADMAP.md
MaterialMaker/include/MaterialMaker/: MaterialDocument.h  MaterialMakerPanel.h  MaterialPreview.h  ModelMaterialImport.h  TexturePacker.h
MaterialMaker/src/: MaterialDocument.cpp  MaterialMakerPanel.cpp  MaterialPreview.cpp  ModelMaterialImport.cpp  TexturePacker.cpp
aidemo/: CMakeLists.txt
aidemo/include/: AiDemoApp.h
aidemo/src/: AiDemoApp.cpp  main.cpp
breakout/: CMakeLists.txt
breakout/assets/shaders/: object.frag  object.vert
breakout/include/: BreakoutApp.h
breakout/src/: BreakoutApp.cpp  main.cpp
character/: CMakeLists.txt
character/assets/models/: character.glb
character/include/: CharacterApp.h
character/src/: CharacterApp.cpp  main.cpp
character/tools/: gen_character.py
ecsgame/: CMakeLists.txt
ecsgame/include/: EcsGameApp.h
ecsgame/src/: EcsGameApp.cpp  main.cpp
editor/: AI_ROADMAP.md  AI_SETUP_GUIDE.md  CAMERA_MANAGER.md  CMakeLists.txt  PARTICLE_EDITOR_MILESTONE.md  SHADER_EDITOR_MILESTONE.md
editor/btscripts/: FleeTarget.h  NotAtTarget.h  README.md
editor/btscripts/templates/: DecoratorTemplate.h  ServiceTemplate.h  TaskTemplate.h
editor/include/: AnimationGraphBuilder.h  BehaviorGraphPanel.h  CharacterAsset.h  CharacterEditorPanel.h  EditorApp.h  EditorAssets.h  EditorCameraController.h  EditorContentController.h  EditorDockspace.h  EditorDragDrop.h  EditorGizmo.h  EditorLog.h  EditorMouseController.h  EditorPanels.h  EditorProject.h  EditorRuntimeController.h  EditorScene.h  EditorScriptTools.h  EditorTransformController.h  EditorViewport.h  GameBtScripts.h  HudEditorPanel.h  NativeDialog.h  ParticleAsset.h  ParticleEditorPanel.h  ParticlePresets.h  RuntimeSceneExporter.h  RuntimeSceneLoader.h  ShaderEditorPanel.h
editor/src/: BehaviorGraphPanel.cpp  CharacterAsset.cpp  CharacterEditorPanel.cpp  EditorApp.cpp  EditorAssets.cpp  EditorCameraController.cpp  EditorContentController.cpp  EditorDockspace.cpp  EditorDragDrop.cpp  EditorGizmo.cpp  EditorLog.cpp  EditorMouseController.cpp  EditorPanels.cpp  EditorProject.cpp  EditorRuntimeController.cpp  EditorScene.cpp  EditorScriptTools.cpp  EditorTransformController.cpp  EditorViewport.cpp  GameBtScripts.cpp  HudEditorPanel.cpp  NativeDialog.cpp  ParticleAsset.cpp  ParticleEditorPanel.cpp  RuntimeSceneExporter.cpp  RuntimeSceneLoader.cpp  ScriptCompilerHelper.cpp  ShaderEditorPanel.cpp  main.cpp
engine/: CMakeLists.txt
engine/src/ai/: AStar.cpp  AgentCollision.cpp  AiAgent.cpp  AiMovement.cpp  BehaviorGraph.cpp  BtScript.cpp  NavMesh.cpp  NavMeshBuilder.cpp  Perception.cpp  Steering.cpp
engine/src/animation/: AnimatedModel.cpp  AnimationController.cpp  Animator.cpp
engine/src/assets/: MaterialAssetLoader.cpp  ParticleAsset.cpp  RuntimeAssetManager.cpp  RuntimeShaderManager.cpp  ShaderAsset.cpp  ShaderGraphCompiler.cpp
engine/src/audio/: AudioAsset.cpp  AudioEditing.cpp  AudioEngine.cpp  RuntimeAudioSystem.cpp  miniaudio_impl.c
engine/src/core/: Application.cpp  Config.cpp  Paths.cpp  Window.cpp
engine/src/ecs/: Ecs.cpp
engine/src/gameplay/: CameraDirector.cpp  GameMode.cpp  GameplaySystems.cpp  PlayerController.cpp  Script.cpp
engine/src/graphics/: Camera.cpp  CameraBlend.cpp  CameraSequence.cpp  CameraShake.cpp  CascadedShadow.cpp  ClusteredLights.cpp  Cubemap.cpp  Framebuffer.cpp  GpuParticleSystem.cpp  GpuProfiler.cpp  IBL.cpp  JpegDecoder.cpp  Mesh.cpp  Model.cpp  ModelDraw.cpp  ObjData.cpp  ParticleRenderer.cpp  ParticleSystem.cpp  PbrRenderer.cpp  PngDecoder.cpp  PointShadow.cpp  PostProcess.cpp  Primitives.cpp  ProceduralSky.cpp  Renderer.cpp  RuntimeParticleSystem.cpp  SSAO.cpp  SSR.cpp  Shader.cpp  ShadowCasters.cpp  ShadowMap.cpp  SkinnedModel.cpp  SkinnedRenderer.cpp  Skybox.cpp  SpotShadow.cpp  Terrain.cpp  TextRenderer.cpp  Texture.cpp  Water.cpp
engine/src/math/: Spline.cpp
engine/src/physics/: CharacterController.cpp  PhysicsWorld.cpp
engine/src/scene/: RuntimeSceneLoader.cpp
engine/src/ui/: Hud.cpp  ImGuiLayer.cpp  UI.cpp  UiBehavior.cpp
game/: CMakeLists.txt  EditorScripts.list
game/assets/shaders/: ball.frag  cube.vert  lamp.frag  lamp.vert  lit.frag  lit.vert  phong_color.frag  (+2 more)
game/include/: Box.h  PongApp.h
game/src/: GameModule.cpp  PongApp.cpp  main.cpp
gennavdemo/: CMakeLists.txt
gennavdemo/include/: GenNavDemoApp.h
gennavdemo/src/: GenNavDemoApp.cpp  main.cpp
marble/: CMakeLists.txt
marble/include/: MarbleApp.h
marble/src/: MarbleApp.cpp  main.cpp
navdemo/: CMakeLists.txt
navdemo/include/: NavDemoApp.h
navdemo/src/: NavDemoApp.cpp  main.cpp
particledemo/: CMakeLists.txt
particledemo/include/: ParticleDemoApp.h
particledemo/src/: ParticleDemoApp.cpp  main.cpp
physics/: CMakeLists.txt
physics/include/: PhysicsDemoApp.h
physics/src/: PhysicsDemoApp.cpp  main.cpp
player/: CMakeLists.txt  player.cfg
player/include/: GameScripts.h  RuntimePlayerApp.h
player/src/: GameScripts.cpp  RuntimePlayerApp.cpp  main.cpp
playerdemo/: CMakeLists.txt
playerdemo/include/: PlayerDemoApp.h
playerdemo/src/: PlayerDemoApp.cpp  main.cpp
prefabdemo/: CMakeLists.txt
prefabdemo/include/: PrefabDemoApp.h
prefabdemo/src/: PrefabDemoApp.cpp  main.cpp
scene/: CMakeLists.txt
scene/include/: SceneApp.h
scene/src/: SceneApp.cpp  main.cpp
terraindemo/: CMakeLists.txt
terraindemo/include/: TerrainDemoApp.h
terraindemo/src/: TerrainDemoApp.cpp  main.cpp
tests/: CMakeLists.txt  animation_movement_tests.cpp  audio_system_tests.cpp  camera_manager_tests.cpp  editor_assets_tests.cpp  image_decode_tests.cpp  material_shader_tests.cpp  particle_tests.cpp  runtime_ai_tests.cpp  script_system_tests.cpp  shader_asset_tests.cpp
viewer/: CMakeLists.txt
viewer/include/: ViewerApp.h
viewer/src/: ViewerApp.cpp  main.cpp
wizardscene/: CMakeLists.txt
wizardscene/include/: WizardSceneApp.h
wizardscene/src/: WizardSceneApp.cpp  main.cpp
(+168 files in other folders)
